Kubernetes_Admins/labs/Lab8/minio_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-service
  namespace: minio-network
spec:
  selector:
    app: minio
  ports:
  - name: minio-svc
    protocol: TCP
    port: 9000
    targetPort: 9000
  - name: minio-console
    protocol: TCP
    port: 9001
    targetPort: 9001
  type: ClusterIP
