Kubernetes_Admins/labs/Lab8/allow_client.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-client
  namespace: minio-network
spec:
  podSelector:
    matchLabels:
      app: minio
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: test-namespace
    - podSelector:
        matchLabels:
          app: client
    ports:
    - protocol: TCP
      port: 9001
    - protocol: TCP
      port: 9000
