Kubernetes_Admins/labs/Lab8/minio_denyall_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: minio-network
spec:
  podSelector: {}
  policyTypes:
  - Ingress
